Fix display property of hot deals, Fix presentation box width on small devices

--- a/src/components/features/Promoted/Promoted.module.scss
+++ b/src/components/features/Promoted/Promoted.module.scss
@@ -2,9 +2,12 @@
 
 .root {
 
+  .productContainer {
+    height: 100%;
+  }
+
   .presentationItem {
     position: relative;
-
   }
 
   .innerBelt {
@@ -123,6 +126,12 @@
     z-index: 1;
     transition: 1s;
     opacity: 0;
+
+    .boxWrapper {
+      height: 100%;
+    }
+
+
 
     .cartBut {
       background-color: #000000;
